// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding applies compact gap and medium button size on medium device 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 16,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding applies iPhoneX notification padding when on iPhoneX 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "#FFF2EB",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "marginBottom": 160,
                  "rowGap": 32,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "display": "flex",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <ActivityIndicator
                size="small"
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#131416",
                      "marginTop": 30,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Loading...
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "transform": [
            {
              "translateY": 100,
            },
          ],
        }
      }
    >
      <View
        elevation={100}
        style={
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 20,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "marginHorizontal": 16,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.8}
              style={
                {
                  "backgroundColor": "#0a0d1392",
                  "borderRadius": 8,
                  "flex": 1,
                  "flexDirection": "row",
                  "padding": 16,
                }
              }
            >
              <View
                style={
                  {
                    "marginRight": 15,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#457a39",
                        "fontSize": 36,
                      },
                      undefined,
                      {
                        "fontFamily": "Ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  {
                    "color": "#ffffff",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#131416",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontFamily": "Geist-Bold",
                        "fontSize": 14,
                        "lineHeight": 18,
                        "marginBottom": 2,
                      },
                    ]
                  }
                  testID="notification-title"
                >
                  Success
                </Text>
                <Text
                  style={
                    [
                      {
                        "color": "#131416",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontSize": 12,
                        "lineHeight": 18,
                      },
                    ]
                  }
                >
                  You successfully reset your wallet!
                </Text>
              </View>
              <View />
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Onboarding applies standard gap and large button size on non-medium device 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding applies standard notification padding when not on iPhoneX 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "backgroundColor": "#FFF2EB",
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "marginBottom": 160,
                  "rowGap": 32,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "display": "flex",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <ActivityIndicator
                size="small"
              />
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#131416",
                      "marginTop": 30,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                Loading...
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "transform": [
            {
              "translateY": 100,
            },
          ],
        }
      }
    >
      <View
        elevation={100}
        style={
          {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 10,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "marginHorizontal": 16,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.8}
              style={
                {
                  "backgroundColor": "#0a0d1392",
                  "borderRadius": 8,
                  "flex": 1,
                  "flexDirection": "row",
                  "padding": 16,
                }
              }
            >
              <View
                style={
                  {
                    "marginRight": 15,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#457a39",
                        "fontSize": 36,
                      },
                      undefined,
                      {
                        "fontFamily": "Ionicons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <View
                style={
                  {
                    "color": "#ffffff",
                    "flex": 1,
                    "flexDirection": "column",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#131416",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontFamily": "Geist-Bold",
                        "fontSize": 14,
                        "lineHeight": 18,
                        "marginBottom": 2,
                      },
                    ]
                  }
                  testID="notification-title"
                >
                  Success
                </Text>
                <Text
                  style={
                    [
                      {
                        "color": "#131416",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 30,
                        "marginVertical": 2,
                      },
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      undefined,
                      {
                        "color": "#ffffff",
                        "flex": 1,
                        "fontSize": 12,
                        "lineHeight": 18,
                      },
                    ]
                  }
                >
                  You successfully reset your wallet!
                </Text>
              </View>
              <View />
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with android 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 16,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with large device and iphoneX 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 24,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 48,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;

exports[`Onboarding renders correctly with medium device and android 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFF2EB",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
  testID="onboarding-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    style={
      {
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingTop": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexBasis": "0%",
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "justifyContent": "space-between",
                "paddingLeft": 20,
                "paddingRight": 20,
                "rowGap": 16,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "width": "100%",
                },
                {
                  "paddingBottom": 24,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 24,
                },
              ]
            }
            testID="onboarding-animation-mock"
          >
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-create-new-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#000000",
                    },
                  ]
                }
              >
                Create a new wallet
              </Text>
            </TouchableOpacity>
            <TouchableOpacity
              accessibilityRole="button"
              accessible={true}
              activeOpacity={1}
              onPress={[Function]}
              onPressIn={[Function]}
              onPressOut={[Function]}
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#000000",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingHorizontal": 16,
                }
              }
              testID="wallet-setup-screen-have-an-existing-wallet-button-id"
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#131416",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    {
                      "color": "#FFFFFF",
                    },
                  ]
                }
              >
                Import using Secret Recovery Phrase
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "#ffffff",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    style={
      [
        {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
        },
        {
          "bottom": -20,
          "height": 300,
          "opacity": 0,
          "pointerEvents": "none",
        },
      ]
    }
    testID="fox-animation-mock"
  />
  <View
    style={
      [
        {
          "display": "flex",
        },
        undefined,
      ]
    }
  />
</RNCSafeAreaView>
`;
